# grilo-plugins

./: configure.ac
src/: Makefile.am
src/jamendo/: grl-jamendo.c
src/media/tracker/: grl-tracker.c
src/metadata/metadata-store/: grl-metadata-store.xml
src/xml-factory/: Makefile.am  dataref.c  dataref.h  expandable-string.c  expandable-string.h  fetch.c  fetch.h  grl-xml-factory.c  grl-xml-factory.h  log.c  log.h
src/xml-factory/sources/: Makefile.am
test/: main.c
tests/: Makefile.am
tests/xml-factory/: Makefile.am
tests/xml-factory/sources/: xml-test-log.xml.in
